Bug 169821. Find prev/next command in typeaheadfind forgets type of search (links only or text). r=kyle, sr=alecf